# locpix_points

./: .gitignore  .pre-commit-config.yaml  DepthCamera_2023-11-02-11-28-23.json  DepthCamera_2023-11-02-11-36-12.json  LICENSE  README.md  README.rst  ScreenCamera_2023-11-02-09-27-14.json  environment.yml  errata.rst  labnotes.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
demo/config/: evaluate.yaml  featanalyse_nn.yaml  featextract.yaml  process.yaml  train.yaml
demo/data/: L_1.parquet  L_10.parquet  L_11.parquet  L_12.parquet  L_14.parquet  L_15.parquet  L_16.parquet  L_17.parquet  L_18.parquet  L_19.parquet  L_2.parquet  L_20.parquet  L_21.parquet  L_24.parquet  L_25.parquet  L_26.parquet  L_27.parquet  L_28.parquet  L_29.parquet  L_30.parquet  L_32.parquet  L_34.parquet  L_35.parquet  L_36.parquet  L_37.parquet  L_38.parquet  L_39.parquet  L_4.parquet  L_40.parquet  L_41.parquet  L_43.parquet  L_44.parquet  L_45.parquet  L_46.parquet  L_47.parquet  L_48.parquet  L_49.parquet  L_5.parquet  L_50.parquet  L_52.parquet  (+310 more)
development/: licenses.py
digits_letters/: README.md  preprocess.ipynb
docs/source/: conf.py  index.rst
experiments/: 1.ipynb  2.ipynb  5.ipynb  6.ipynb  7.ipynb  messing around.ipynb  prep_c15_data.ipynb
experiments/.ipynb_checkpoints/: 1-checkpoint.ipynb  messing around-checkpoint.ipynb  practice-checkpoint.ipynb
experiments/expt1/: augmentations.yaml  best.yaml  train_augmentations.sh  train_ratio.sh  train_reduce_radius.sh
experiments/expt2/: starter.yaml  test.yaml  train_starter.sh  train_test.sh
experiments/expt3/: starter.yaml  train_starter.sh
experiments/expt5/: starter.yaml  train_starter.sh
experiments/expt6/: starter.yaml  train_starter.sh
experiments/expt7/: starter.yaml  train_starter.sh
experiments/hyper_param_sweep/: aug_extended.yaml  k.yaml  layer_size.yaml  normscale.yaml  radius.yaml  ratio.yaml  reduce_radius.yaml  train_aug_extended.sh  train_base.sh  train_k.sh  train_layer_size.sh  train_normscale.sh  train_radius.sh  train_ratio.sh  train_reduce_radius.sh
old_experiments/: 2.ipynb  3.ipynb  5.ipynb  prep_c15_data_expt6.ipynb  template.ipynb
old_experiments/expt1/: aug_extended.yaml  augmentations.yaml  base.yaml  best.yaml  k.yaml  layer_size.yaml  normscale.yaml  radius.yaml  ratio.yaml  reduce_radius.yaml  train_aug_extended.sh  train_augmentations.sh  train_base.sh  train_k.sh  train_layer_size.sh  train_normscale.sh  train_radius.sh  train_reduce_radius copy.sh  train_reduce_radius.sh
old_experiments/expt2/: starter.yaml  train_starter.sh
old_experiments/expt3/: starter.yaml  train_starter.sh
old_experiments/expt5/: starter.yaml  train_starter.sh
old_experiments/expt6/: starter.yaml  train_starter.sh
old_experiments/expt7/: starter.yaml  train_starter.sh
piccolo_tma/: README.md
piccolo_tma/NORMAL_VS_CANCER/: README.md
piccolo_tma/WT_PATIENT_OUTCOMES_PAN/: README.md
sandpit/: dataloader.py  remove_processed_files.py  subgraphs.py  test.csv  test.py  test_2.py  test_aggr.py  test_cluster_dataset.csv  test_loc_dataset.csv  test_loc_dataset_big.csv  test_output.csv  test_pointnet.py
semore_expts/: README.md  featextract.py  featextract.sh  k_fold.py  preprocess.py  preprocess.sh  process.py  run.sh  run_all.sh  train.sh
semore_expts/task_1/: README.md  featextract.py  featextract.sh  k_fold.py  preprocess.py  preprocess.sh  train.sh
semore_expts/task_2/: README.md  k_fold.py  train.sh
semore_expts/task_3/: k_fold.py  train.sh
semore_expts/task_4/: README.md  k_fold.py  metadata.json
semore_expts_old/: README.md
tests/: featanalysis.py  featextract.py  k_fold.py  preprocess.py  process.py  test_mock.py  tests.sh  tests_github_1.sh  tests_github_2.sh  tests_github_3.sh  train.py
tests/config/: process.yaml  (+4 more)
(+1705 files in other folders)
