[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "locpix_points"
dynamic = ["version"]
authors = [
  { name="Oliver Umney", email="scou@leeds.ac.uk" },
]
description = "Package for analysing SMLM data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars",
    "numpy",
    "napari",
    "matplotlib",
    "imageio-ffmpeg", # napari needs this
    "PyQt5", # napari needs this
    "torch",
    "pyarrow",
    "wandb",
    "python-dotenv",
    "pyyaml",
    "flake8",
    "tox",
    "pytest",
    "seaborn",
    "ipdb",
    "pgmpy",
    "pre-commit",
    "importlib_resources",
    # need to install https://github.com/mims-harvard/GraphXAI

    # "torchvision",  check actually need this
    # conda install pyg -c pyg
    # pip install pyarrow

]

[project.scripts]
initialise = "locpix_points.scripts.initialise:main"
preprocess = "locpix_points.scripts.preprocess:main"
process = "locpix_points.scripts.process:main"
annotate = "locpix_points.scripts.annotate:main"
train = "locpix_points.scripts.train:main"
evaluate = "locpix_points.scripts.evaluate:main"
clean_up = "locpix_points.scripts.clean_up:main"
featanalyse = "locpix_points.scripts.featanalyse:main"
featextract = "locpix_points.scripts.featextract:main"
k_fold = "locpix_points.scripts.k_fold:main"
visualise = "locpix_points.scripts.visualise:main"

[project.urls]
"Homepage" = "https://github.com/oubino/locpix_points"
"Bug Tracker" = "https://github.com/oubino/locpix_points/issues"

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py311 # py37, py38, py39, py310
isolated_build = True

[gh-actions]
python =
    #3.8: py38
    #3.9: py39
    #3.10: py310
    3.11: py311

[testenv]
commands =
    pytest tests/

"""
